<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.appspiriment.kashproxy.ui.mappingdetail.ResponseMappingViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kash_primary_background"
        tools:context=".ui.maplist.ResponseMapListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/kash_padding_standard_xxlarge">

            <TextView
                android:id="@+id/tv_protocol_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kash_protocol"
                android:textColor="@color/kash_primary_text_color"
                app:layout_constraintBottom_toBottomOf="@+id/protocol_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/protocol_spinner" />

            <Spinner
                android:id="@+id/protocol_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kash_padding_standard_small"
                android:background="@drawable/bg_curvrect_4_strk_transparent_clr_ffffff"
                android:entries="@array/kash_protocol"
                android:minWidth="80dp"
                android:minHeight="@dimen/kash_padding_standard_xxxlarge"
                android:paddingStart="@dimen/kash_padding_standard_medium"
                android:paddingTop="@dimen/kash_padding_standard_xsmall"
                android:paddingEnd="@dimen/kash_padding_standard_xsmall"
                android:paddingBottom="@dimen/kash_padding_standard_xsmall"
                app:layout_constraintStart_toEndOf="@+id/tv_protocol_title"
                app:layout_constraintTop_toTopOf="parent"
                app:selectedValue="@={viewModel.protocol}" />


            <TextView
                android:id="@+id/ic_action_delete"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/kash_padding_standard_xxxlarge"
                android:text="@string/kash_delete"
                android:gravity="center"
                android:padding="@dimen/kash_padding_standard_xsmall"
                android:textColor="@color/design_default_color_error"
                android:drawableStart="@drawable/ic_action_delete"
                android:drawablePadding="@dimen/kash_padding_standard_xsmall"
                android:onClick="@{()->viewModel.deleteMapping()}"
                app:isVisible="@{viewModel.mappingId != null}"
                app:layout_constraintBottom_toBottomOf="@+id/protocol_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/protocol_spinner" />

            <TextView
                android:id="@+id/tv_url_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xlarge"
                android:text="@string/kash_url"
                android:textColor="@color/kash_primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/protocol_spinner" />

            <com.appspiriment.kashproxy.utils.customview.KashProxyEditText
                android:id="@+id/txt_url"
                android:layout_width="@dimen/kash_padding_standard_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xsmall"
                android:background="@drawable/bg_curvrect_4_strk_transparent_clr_ffffff"
                android:hint="@string/kash_host_hint"
                android:minHeight="80dp"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onApiUrlChanged(text)}"
                android:paddingStart="@dimen/kash_padding_standard_medium"
                android:paddingTop="@dimen/kash_padding_standard_xsmall"
                android:paddingEnd="@dimen/kash_padding_standard_medium"
                android:paddingBottom="@dimen/kash_padding_standard_xsmall"
                android:text="@{viewModel.apiUrl}"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColor="@color/kash_primary_text_color"
                android:textSize="14sp"
                app:errorRes="@{viewModel.apiUrlError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_url_title"
                app:layout_constraintTop_toBottomOf="@id/tv_url_title" />

            <TextView
                android:id="@+id/tv_host_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xsmall"
                android:gravity="center"
                android:text="@string/kash_please_select_a_value"
                android:textColor="@color/kash_text_error"
                android:textSize="14sp"
                app:isVisible="@{viewModel.apiUrlError != null}"
                app:layout_constraintStart_toStartOf="@+id/txt_url"
                app:layout_constraintTop_toBottomOf="@+id/txt_url" />

            <TextView
                android:id="@+id/tv_host_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xlarge"
                android:text="@string/kash_host"
                android:textColor="@color/kash_primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_host_error" />

            <EditText
                android:id="@+id/txt_host"
                android:layout_width="@dimen/kash_padding_standard_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xsmall"
                android:background="@drawable/bg_curvrect_4_strk_transparent_clr_ffffff"
                android:hint="@string/kash_host_hint"
                android:minHeight="@dimen/kash_padding_standard_xxxlarge"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onHostChanged(text)}"
                android:paddingStart="@dimen/kash_padding_standard_medium"
                android:paddingTop="@dimen/kash_padding_standard_xsmall"
                android:paddingEnd="@dimen/kash_padding_standard_medium"
                android:paddingBottom="@dimen/kash_padding_standard_xsmall"
                android:text="@{viewModel.apiHost}"
                android:textColor="@color/kash_primary_text_color"
                android:textSize="14sp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_host_title"
                app:layout_constraintTop_toBottomOf="@id/tv_host_title" />

            <TextView
                android:id="@+id/tv_path_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xlarge"
                android:text="@string/kash_path_title"
                android:textColor="@color/kash_primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_host" />

            <EditText
                android:id="@+id/txt_path"
                android:layout_width="@dimen/kash_padding_standard_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xsmall"
                android:background="@drawable/bg_curvrect_4_strk_transparent_clr_ffffff"
                android:hint="@string/kash_path_hint"
                android:maxHeight="160dp"
                android:minHeight="@dimen/kash_padding_standard_xxxlarge"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onPathChanged(text)}"
                android:paddingStart="@dimen/kash_padding_standard_medium"
                android:paddingTop="@dimen/kash_padding_standard_xsmall"
                android:paddingEnd="@dimen/kash_padding_standard_xsmall"
                android:paddingBottom="@dimen/kash_padding_standard_xsmall"
                android:text="@{viewModel.apiPath}"
                android:textColor="@color/kash_primary_text_color"
                android:textSize="14sp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_path_title"
                app:layout_constraintTop_toBottomOf="@id/tv_path_title" />

            <TextView
                android:id="@+id/tv_queries_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xlarge"
                android:text="@string/kash_queries_title"
                android:textColor="@color/kash_primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_path" />

            <EditText
                android:id="@+id/txt_queries"
                android:layout_width="@dimen/kash_padding_standard_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xsmall"
                android:background="@drawable/bg_curvrect_4_strk_transparent_clr_ffffff"
                android:hint="@string/kash_queries_hint"
                android:maxHeight="160dp"
                android:minHeight="@dimen/kash_padding_standard_xxxlarge"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onQueryChanged(text)}"
                android:paddingStart="@dimen/kash_padding_standard_medium"
                android:paddingTop="@dimen/kash_padding_standard_xsmall"
                android:paddingEnd="@dimen/kash_padding_standard_medium"
                android:paddingBottom="@dimen/kash_padding_standard_xsmall"
                android:text="@{viewModel.apiQueries}"
                android:textColor="@color/kash_primary_text_color"
                android:textSize="14sp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_queries_title"
                app:layout_constraintTop_toBottomOf="@id/tv_queries_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_rewrite_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_queries">

                <CheckBox
                    android:id="@+id/chk_rewrite"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/kash_padding_standard_xxxlarge"
                    android:layout_marginTop="@dimen/kash_padding_standard_xlarge"
                    android:buttonTint="@color/kash_check_mark_color"
                    android:checked="@={viewModel.isStatusRewriting}"
                    android:paddingStart="@dimen/kash_padding_standard_xsmall"
                    android:text="@string/kash_rewrite_enabled"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/btn_add_rewrite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    android:onClick="@{()->viewModel.onAddRewriteClick()}"
                    android:text="@string/kash_add"
                    android:textColor="@color/kash_primary_button_text_color"
                    app:chipBackgroundColor="@color/kash_primary_button_color"
                    app:isVisible="@{viewModel.isStatusRewriting}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/chk_rewrite" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/container_rewrite_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/kash_padding_standard_xsmall"
                    android:background="@drawable/bg_curvrect_4_strk_transparent_clr_ffffff"
                    android:foregroundGravity="center"
                    android:padding="@dimen/kash_padding_standard_medium"
                    app:chipSpacingHorizontal="@dimen/kash_padding_standard_medium"
                    app:chipSpacingVertical="@dimen/kash_padding_standard_medium"
                    app:isVisible="@{viewModel.isStatusRewriting}"
                    app:layout_constraintTop_toBottomOf="@id/btn_add_rewrite" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/chk_map_response"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/kash_padding_standard_xxxlarge"
                android:layout_marginTop="@dimen/kash_padding_standard_xlarge"
                android:buttonTint="@color/kash_check_mark_color"
                android:checked="@={viewModel.isResponseMapping}"
                android:paddingStart="@dimen/kash_padding_standard_xsmall"
                android:text="@string/kash_map_response_prompt"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_rewrite_status" />

            <EditText
                android:id="@+id/txt_response"
                android:layout_width="@dimen/kash_padding_standard_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xsmall"
                android:background="@drawable/bg_curvrect_4_strk_transparent_clr_ffffff"
                android:gravity="top"
                android:hint="@string/kash_response_body"
                android:maxHeight="300dp"
                android:minHeight="156dp"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onResponseBodyChanged(text)}"
                android:padding="@dimen/kash_padding_standard_medium"
                android:scrollbars="vertical"
                android:text="@{viewModel.responseBody}"
                android:textColor="@color/kash_primary_text_color"
                android:textSize="14sp"
                app:isVisible="@{viewModel.isResponseMapping}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chk_map_response" />

            <Button
                style="@style/KashButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kash_padding_standard_xxxlarge"
                android:layout_marginBottom="@dimen/kash_padding_standard_xlarge"
                android:onClick="@{()->viewModel.saveMapping()}"
                android:text="@string/kash_save_mapping"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_response" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>